apps/development/nginx-app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nginx
  labels: 
    mesh: santosoc-mesh
    appmesh.k8s.aws/sidecarInjectorWebhook: enabled
    gateway: appmesh-gateway
