apps/development/nginx-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-app
  labels:
    app: nginx-app
  namespace: nginx
spec:
  replicas: 100
  selector:
    matchLabels:
      app: nginx-app
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: nginx-app
    spec:
      containers:
      - image: public.ecr.aws/nginx/nginx:1.21
        imagePullPolicy: IfNotPresent
        name: nginx-app
        ports:
        - containerPort: 80
      affinity: 
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: alpha.eksctl.io/nodegroup-name
                    operator: In
                    values:
                    - ng-consul-outposts
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 50
            preference:
              matchExpressions:
                - key: alpha.eksctl.io/nodegroup-name
                  operator: In
                  values:
                  - ng-consul-frontend
          - weight: 50
            preference:
              matchExpressions:
                - key: alpha.eksctl.io/nodegroup-name
                  operator: In
                  values:
                  - ng-consul-outposts
