apps/development/nginx-app/fe-nginx-virtualgateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-gw
  namespace: nginx
  annotations:
    # service.beta.kubernetes.io/aws-load-balancer-name: "ingress-external-lb"
    # service.beta.kubernetes.io/aws-load-balancer-type: nlb-ip
    # service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8088
      name: http
  selector:
    app: ingress-gw

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-gw
  namespace: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ingress-gw
  template:
    metadata:
      labels:
        app: ingress-gw
    spec:
      containers:
        - name: envoy
          image: 840364872350.dkr.ecr.us-west-2.amazonaws.com/aws-appmesh-envoy:v1.16.1.1-prod
          ports:
            - containerPort: 8088
