apps/development/nginx-app/virtualservice.yaml
apiVersion: appmesh.k8s.aws/v1beta2
kind: VirtualService
metadata:
  name: nginx
  namespace: nginx
spec:
  awsName: nginx.santosoc.hosted.local
  provider:
    virtualRouter:
      virtualRouterRef:
        name: nginx-router
